--- a/spec/dummy/config/database.yml
+++ b/spec/dummy/config/database.yml
@@ -4,22 +4,38 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 #
-default: &default
-  adapter: sqlite3
-  pool: 5
-  timeout: 5000
 
 development:
-  <<: *default
-  database: db/development.sqlite3
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
+  pool: 5
+  username: root
+  password:
+  host: localhost
+  database: nocms_constrained_views_dev
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: db/test.sqlite3
+test_mysql2: &test_mysql2
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
+  pool: 5
+  username: root
+  password:
+  host: localhost
 
-production:
-  <<: *default
-  database: db/production.sqlite3
+test_pg: &test_pg
+  adapter: postgresql
+  pool: 5
+  timeout: 5000
+  username: postgres
+  password: postgres
+  host: localhost
+  encoding: utf8
+
+test:
+  database: nocms_constrained_views_test
+  <<: *test_<%= NoCms::ConstrainedViews.installed_db_gem %>
